--- a/nexus.ai/src/App.css
+++ b/nexus.ai/src/App.css
@@ -1,38 +1,47 @@
-.App {
+div.historico{
+  width: 33%;
+  height: 100%;
+  margin: 0;
+  background-color: #6A9F9D;
+}
+
+h1{
+  margin: 0;
+}
+
+div.consulta{
+  padding: 7% 0 0 3%;
+  margin: 0 0 0 2%;
+}
+
+div.consulta textarea{
+  width: 90%;
+}
+
+div.novaConsulta{
+  width: 33%;
+  height: 100%;
+  margin: 0 0 0 1%;
+  background-color: #6A9F9D;
+}
+
+div.interfaceNovaConsulta{
+  margin: auto;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
+  width: 80%;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+div.interfaceNovaConsulta h1{
+  padding: 0 0 3% 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+div.interfaceNovaConsulta select{
+  margin: 0 0 3% 0;
+}
+
+textarea.novaConsultaText{
+  height: 30;
+  text-align: center ;
 }
