--- a/nexus.ai/src/index.css
+++ b/nexus.ai/src/index.css
@@ -1,13 +1,48 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html, body, div#root{
+  width: 100%;
+  height: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App{
+  height: 100%;
+  width: 100%;
+  display: flex;
+}
+
+body{
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+div.app{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+header{
+  width: 100%;
+  background-color: #336F51;
+  display: flex;
+  flex-direction: row;
+}
+
+footer{
+  width: 100%;
+  height: 100px;
+  background-color: #336F51;
+  position: fixed;
+  bottom: 0;
+}
+
+img#logo{
+  height: 7rem;
+  margin: 1% 0 1% 1%;
+}
+
+h1#titulo{
+  color: white;
+  margin: auto;
 }
