--- a/nexus.ai/src/index.css
+++ b/nexus.ai/src/index.css
@@ -1,3 +1,5 @@
+/* CORPO DO SITE */
+
 html, body, div#root{
   width: 100%;
   height: 100%;
@@ -13,7 +15,7 @@ body{
   margin: 0;
   padding: 0;
   display: flex;
-  flex-direction: column;
+  flex-direction: column;background-color: #BDF3D8;
 }
 
 div.app{
@@ -35,7 +37,12 @@ footer{
   background-color: #336F51;
   position: fixed;
   bottom: 0;
-  text-align: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  height: 55px;
+  
 }
 
 img#logo{
@@ -49,6 +56,10 @@ img#logo{
   font-weight: 400;
   font-style: normal;
 }
+
+
+/* COMPONENTES */
+
 
 h1#titulo{
   color: white;
@@ -64,6 +75,7 @@ h1#historico-h1{
   font-family: "IBM Plex Mono", monospace;
   font-weight: 600;
   font-style: normal;
+  align-content: center;
 }
 
 h1#nova-con-h1{
@@ -73,18 +85,68 @@ h1#nova-con-h1{
   font-style: normal;
 }
 
-button#botao-pesquisa{
+div#btn-div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 10vh;
+}
+
+button#botao-consultar{
+  background-color: #659F82;
   color: #273D3B;
+  border: line;
+  border-radius: 25px;
+  border-color: #273D3B;
+  padding: 10px 160px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+  font-size: 20px;
   font-family: "IBM Plex Mono", monospace;
-  font-weight: 500;
-  font-style: normal;
+  font-weight: 900;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  -ms-border-radius: 25px;
+  -o-border-radius: 25px;
+  transition: background-color 0.3s, color 0.3s;
+  -webkit-transition: background-color 0.3s, color 0.3s;
+  -moz-transition: background-color 0.3s, color 0.3s;
+  -ms-transition: background-color 0.3s, color 0.3s;
+  -o-transition: background-color 0.3s, color 0.3s;
+}
+
+#botao-consultar:hover{
+  background-color: #336F51;
+  color: white;
 }
 
 select#inputMateriaNova{
-  color: #273D3B;
+  background-color: #659F82;
+  color:#273D3B;
+  border: line;
+  border-radius: 25px;
+  border-color: #273D3B;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  font-weight: 900;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  -ms-border-radius: 25px;
+  -o-border-radius: 25px;
 }
 
-sugestao{
+label#label-materia-nova{
+  font-family: 'IBM Plex Mono', monospace;
+  font-weight: 400;
+  font-size: 30px;
+  text-align: left;
+}
+
+div#sugestao{
   background-color: #273D3B;
 }
 
