--- a/nexus.ai/src/index.css
+++ b/nexus.ai/src/index.css
@@ -32,21 +32,22 @@ header{
 }
 
 footer{
-  width: 100%;
-  height: 100px;
   background-color: #336F51;
-  position: fixed;
+  position: auto;
+  left: 0;
+  right: 0;
   bottom: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
   color: white;
-  height: 55px;
-  
+  height: 45px;
+  font-size: 13px;
+  padding: 10px;
 }
 
 img#logo{
-  height: 6rem;
+  height: 5rem;
   margin: 1% 0 1% 1%;
 }
 
@@ -65,9 +66,9 @@ h1#titulo{
   color: white;
   margin: auto;
   font-family: "IBM Plex Mono", monospace;
-  font-weight: 600;
+  font-weight: 1000;
   font-style: normal;
-  font-size: 55px;
+  font-size: 45px;
 }
 
 h1#historico-h1{
@@ -76,6 +77,7 @@ h1#historico-h1{
   font-weight: 600;
   font-style: normal;
   align-content: center;
+  font-size: 35px;
 }
 
 h1#nova-con-h1{
@@ -83,13 +85,14 @@ h1#nova-con-h1{
   font-family: "IBM Plex Mono", monospace;
   font-weight: 600;
   font-style: normal;
+  font-size: 35px;
 }
 
 div#btn-div{
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 10vh;
+  height: 15vh;
 }
 
 button#botao-consultar{
@@ -148,8 +151,49 @@ label#label-materia-nova{
 
 div#sugestao{
   background-color: #273D3B;
+  align-self: center;
 }
 
-/* select{
-  color: #659F82;
-} */
+textarea{
+  background-color: rgb(235, 235, 235);
+  border-style: inset;
+  border-color: #273D3B;
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
+}
+
+textarea#novaConsultaText{
+  height: 200px;
+  width: 490px;
+  color: black;
+  font-family: 'IBM Plex Mono', monospace;
+  font-weight: 500;
+  font-size: 18px;
+  outline: none;
+}
+
+textarea#novaConsultaText::placeholder{
+  color: black;
+  font-style: italic;
+  font-size: 18px;
+  text-align: left;
+  font-weight: 300;
+}
+
+textarea#conversa-txt{
+  height: 80px;
+  width: 490px;
+  color: black;
+  font-family: 'IBM Plex Mono', monospace;
+  font-weight: 400;
+  font-size: 18px;
+  outline: none;
+}
+
+a#open-ai-link{
+  text-decoration: none;
+  font-weight: 900;
+}
