adiciona lógica de troca de renderização de conteúdos

--- a/nexus.ai/src/pages/main/main.css
+++ b/nexus.ai/src/pages/main/main.css
@@ -255,13 +255,15 @@ html, body, div#root{
   height: 100%;
   width: 100%;
   display: flex;
+  background-color: #BDF3D8;
 }
 
 body{
   margin: 0;
   padding: 0;
   display: flex;
-  flex-direction: column;background-color: #BDF3D8;
+  flex-direction: column;
+  background-color: #BDF3D8;
 }
 
 div.app{
@@ -302,4 +304,8 @@ img#logo{
   font-family: "IBM Plex Mono", monospace;
   font-weight: 400;
   font-style: normal;
+}
+
+.chat{
+  margin: auto;
 }
