--- a/nexus.ai/src/pages/paginaPrincipal/main.css
+++ b/nexus.ai/src/pages/paginaPrincipal/main.css
@@ -14,14 +14,25 @@ header {
   border-bottom: 1px solid #ddd;
 }
 
+body{
+  scrollbar-color: #888 #f4f4f4;
+  scrollbar-width: thin;
+}
+
 /* Footer */
 footer {
   background-color: #f8f9fa;
   padding: 10px;
   text-align: center;
-  font-size: 1rem;
+  height: 4.5rem;
   border-top: 1px solid #ddd;
   margin-top: auto; /* Push footer to the bottom */
+  position: relative;
+}
+
+footer a{
+  text-decoration: none;
+  color: rgb(24, 24, 24);
 }
 
 /* Main content area: Sidebar + Chat */
@@ -55,6 +66,29 @@ footer {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+::-webkit-scrollbar{
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f4f4f4;
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(90deg, #747474, #3d3d3d);
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #00000000;
+}
+
+
+
 /* Adjust for responsiveness */
 @media (max-width: 768px) {
   .main-content {
@@ -67,4 +101,13 @@ footer {
     border-right: none;
     border-bottom: 1px solid #ddd;
   }
+
+  footer {
+    display: none; /* Esconde o footer no mobile */
+  }
+
+  body{
+    font-size: 12px;
+  }
+
 }
