--- a/nexus.ai/src/pages/paginaPrincipal/main.css
+++ b/nexus.ai/src/pages/paginaPrincipal/main.css
@@ -22,9 +22,9 @@ body{
 /* Footer */
 footer {
   background-color: #f8f9fa;
-  padding: 10px;
+  padding: 1px;
   text-align: center;
-  height: 4.5rem;
+  height: 2px;
   border-top: 1px solid #ddd;
   margin-top: auto; /* Push footer to the bottom */
   position: relative;
@@ -61,9 +61,13 @@ footer a{
 
 /* Chatbox styles */
 .chat-container .chat-box {
-  border-radius: 20px;
+  border-radius: 6px;
   padding: 15px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
 }
 
 ::-webkit-scrollbar{
