--- a/nexus.ai/src/pages/paginaPrincipal/main.css
+++ b/nexus.ai/src/pages/paginaPrincipal/main.css
@@ -20,15 +20,16 @@ body{
 }
 
 /* Footer */
-footer {
+/* footer {
   background-color: #f8f9fa;
   padding: 10px;
   text-align: center;
   height: 4.5rem;
   border-top: 1px solid #ddd;
-  margin-top: auto; /* Push footer to the bottom */
+  margin-top: auto; /* Push footer to the bottom 
   position: relative;
-}
+} 
+ */
 
 footer a{
   text-decoration: none;
@@ -43,14 +44,15 @@ footer a{
 }
 
 /* Sidebar */
-.sidebar {
-  width: 100%; /* Fixed width for sidebar */
+#sidebar {
+  width: 20%;
   background-color: #f1f1f1;
   padding: 20px;
   height: 100%;
   border-right: 1px solid #ddd;
-  position: relative; /* Keep it in place */
+  position: relative;
 }
+
 
 /* Chat container */
 .chat-container {
@@ -87,6 +89,9 @@ footer a{
   background: #00000000;
 }
 
+#checkbox {
+  display: none;
+}
 
 
 /* Adjust for responsiveness */
@@ -95,11 +100,8 @@ footer a{
     flex-direction: column;
   }
 
-  .sidebar {
-    width: 100%;
-    height: auto;
-    border-right: none;
-    border-bottom: 1px solid #ddd;
+  #sidebar {
+    display: none;
   }
 
   footer {
@@ -110,4 +112,37 @@ footer a{
     font-size: 12px;
   }
 
+  #checkbox {
+    display: none;
+  }
+  
+  .toggle {
+    position: relative;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10%;
+    transition-duration: .3s;
+  }
+  
+  .bars {
+    width: 70%;
+    height: 4px;
+    background-color: black;
+    border-radius: 5px;
+    transition-duration: .6s;
+  }
+  
+  #checkbox:checked + .toggle .bars {
+    /* display: none; */
+    rotate: 360deg;
+  }
+
 }
+
+
+
